@@ -1,4 +1,4 @@
-#serial 2
+#serial 3
 
 dnl Determine whether to add fnmatch.o to LIBOBJS and to
 dnl define fnmatch to rpl_fnmatch.
@@ -10,8 +10,7 @@ AC_DEFUN(jm_FUNC_FNMATCH,
   AC_FUNC_FNMATCH
   if test $ac_cv_func_fnmatch_works = no \
       && test $ac_cv_gnu_library = no; then
-    AC_SUBST(LIBOBJS)
-    LIBOBJS="$LIBOBJS fnmatch.$ac_objext"
+    AC_LIBOBJ([fnmatch])
     AC_DEFINE_UNQUOTED(fnmatch, rpl_fnmatch,
       [Define to rpl_fnmatch if the replacement function should be used.])
   fi
